--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextn",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack -p 9002",
@@ -40,10 +40,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "firebase": "^11.3.0",
+    "firebase": "^11.6.0",
     "genkit": "^1.0.4",
     "lucide-react": "^0.475.0",
-    "next": "15.2.3",
+    "next": "^15.3.1",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
