--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 GOOGLE_GENAI_API_KEY=AIzaSyBYF7UwKNmGQJ8HLotRdgd6VWRjlDoK8fw
+RAZORPAY_KEY_ID=rzp_test_51TABBJcBdp6DS
+RAZORPAY_KEY_SECRET=2Dg1SED1eabs24JaaBOXAoxI
