--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 GOOGLE_GENAI_API_KEY=AIzaSyBYF7UwKNmGQJ8HLotRdgd6VWRjlDoK8fw
 RAZORPAY_KEY_ID=rzp_test_51TABBJcBdp6DS
 RAZORPAY_KEY_SECRET=2Dg1SED1eabs24JaaBOXAoxI
+SMTP_HOST=your_smtp_host
+SMTP_PORT=587
+SMTP_USER=your_smtp_username
+SMTP_PASS=your_smtp_password
+SMTP_FROM_EMAIL=noreply@yourdomain.com
+SMTP_SECURE=false
