Sender address - referrals.bridge@gmail.com SMTP server host-smtp.gmail.com SMTP server port-587 SMTP account username-ReferralBridge SMTP account password-9175282915 SMTP security mode-STARTTLS

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-GOOGLE_GENAI_API_KEY=AIzaSyBYF7UwKNmGQJ8HLotRdgd6VWRjlDoK8fw
+GOOGLE_GENAI_API_KEY=YOUR_GOOGLE_GENAI_API_KEY
 RAZORPAY_KEY_ID=rzp_test_51TABBJcBdp6DS
 RAZORPAY_KEY_SECRET=2Dg1SED1eabs24JaaBOXAoxI
-SMTP_HOST=your_smtp_host
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=your_smtp_username
-SMTP_PASS=your_smtp_password
-SMTP_FROM_EMAIL=noreply@yourdomain.com
+SMTP_USER=referrals.bridge@gmail.com
+SMTP_PASS=9175282915
+SMTP_FROM_EMAIL=referrals.bridge@gmail.com
 SMTP_SECURE=false
