--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next": "^15.3.1",
     "nodemailer": "^6.9.14",
     "patch-package": "^8.0.0",
+    "razorpay": "^2.9.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
