In referral request form, show suggestions while typing Target company name with below comapnies and even if company is not present one should be able to type his/her company
Accenture

Tata Consultancy Services (TCS)

Infosys

Capgemini

Wipro

Cognizant

Tech Mahindra

Amdocs

Nice

Fujitsu

Deloitte

HCL

Microsoft

Oracle

DXC

Mercedes

Salesforce

PwC

--- a/components.json
+++ b/components.json
@@ -1,3 +1,4 @@
+
 {
   "$schema": "https://ui.shadcn.com/schema.json",
   "style": "default",
@@ -17,5 +18,57 @@
     "lib": "@/lib",
     "hooks": "@/hooks"
   },
-  "iconLibrary": "lucide"
+  "iconLibrary": "lucide",
+  "components": [
+    "accordion",
+    "alert",
+    "alert-dialog",
+    "avatar",
+    "badge",
+    "button",
+    "calendar",
+    "card",
+    "checkbox",
+    "collapsible",
+    "combobox",
+    "command",
+    "context-menu",
+    "dialog",
+    "dropdown-menu",
+    "form",
+    "hover-card",
+    "input",
+    "label",
+    "menubar",
+    "navigation-menu",
+    "popover",
+    "progress",
+    "radio-group",
+    "resizable",
+    "scroll-area",
+    "select",
+    "separator",
+    "sheet",
+    "skeleton",
+    "slider",
+    "switch",
+    "table",
+    "tabs",
+    "textarea",
+    "toast",
+    "toggle",
+    "toggle-group",
+    "tooltip",
+    "aspect-ratio",
+    "carousel",
+    "drawer",
+    "input-otp",
+    "pagination",
+    "sonner",
+    "breadcrumb",
+    "chart",
+    "pagination",
+    "sheet",
+    "sidebar"
+  ]
 }
