--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tanstack/react-query": "^5.66.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "firebase": "^11.6.0",
     "genkit": "^1.0.4",
